fix: banner with image on background on mobile

--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -37,8 +37,8 @@
 @media screen and (max-width: 749px) {
   .banner--small.banner--mobile-bottom:not(.banner--adapt) .banner__media,
   .banner--small.banner--stacked:not(.banner--mobile-bottom):not(.banner--adapt) > .banner__media {
-    /* height: 28rem; */
-    display: none;
+    height: 28rem;
+    /* display: none; */
   }
 
   .banner--medium.banner--mobile-bottom:not(.banner--adapt) .banner__media,
@@ -190,18 +190,19 @@
     height: auto;
   }
 
-  .banner:not(.banner--mobile-bottom):not(.email-signup-banner) .banner__box {
-    background-color: transparent;
+  /* keep the same button on mobile, wtf ? */
+  /*.banner:not(.banner--mobile-bottom):not(.email-signup-banner) .banner__box {
+    background-color: transparent; 
     --color-foreground: 255, 255, 255;
     --color-button: 255, 255, 255;
-    --color-button-text: 0, 0, 0;
-  }
+    --color-button-text: 0, 0, 0; 
+  }*/
 
-  .banner:not(.banner--mobile-bottom) .banner__box {
-    border: none;
+  /*.banner:not(.banner--mobile-bottom) .banner__box {
+     border: none;
     border-radius: 0;
-    box-shadow: none;
-  }
+    box-shadow: none; 
+  }*/
 
   .banner:not(.banner--mobile-bottom) .button--secondary {
     --color-button: 255, 255, 255;
